--- a/index.htm
+++ b/index.htm
@@ -2,18 +2,116 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>For You, My Love</title>
-  <link rel="stylesheet" href="style.css">
+  <title>I'm Sorry ❤️</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom right, #ffe6f0, #fff5f5);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px;
+      animation: fadeInBody 1.2s ease-in;
+    }
+
+    .card {
+      background-color: #ffffffdd;
+      border-radius: 15px;
+      padding: 30px 40px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      max-width: 700px;
+      text-align: center;
+      margin-bottom: 30px;
+      animation: popUp 1s ease;
+    }
+
+    h1 {
+      color: #ff6699;
+      font-size: 2em;
+      animation: heartbeat 2s infinite;
+    }
+
+    .message {
+      font-size: 1.2em;
+      color: #444;
+      margin-top: 20px;
+      animation: fadeInUp 1.5s ease;
+    }
+
+    img {
+      width: 300px;
+      margin: 15px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+      animation: fadeInPhoto 1s ease-in forwards;
+      opacity: 0;
+    }
+
+    img:nth-of-type(1) { animation-delay: 0.5s; }
+    img:nth-of-type(2) { animation-delay: 0.7s; }
+    img:nth-of-type(3) { animation-delay: 0.9s; }
+
+    img:hover {
+      transform: scale(1.05);
+    }
+
+    footer {
+      margin-top: 30px;
+      color: #aaa;
+      font-size: 0.9em;
+      animation: fadeInUp 2s ease-in;
+    }
+
+    /* Keyframes for animations */
+    @keyframes fadeInBody {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes popUp {
+      0% { transform: scale(0.8); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+
+    @keyframes heartbeat {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+    }
+
+    @keyframes fadeInUp {
+      0% { transform: translateY(20px); opacity: 0; }
+      100% { transform: translateY(0); opacity: 1; }
+    }
+
+    @keyframes fadeInPhoto {
+      to { opacity: 1; }
+    }
+  </style>
 </head>
 <body>
+
   <div class="card">
-    <h1>Hey Babe,</h1>
-    <p>
-      Every line of code I write reminds me of how beautifully you’ve written yourself into my heart.<br>
-      This little site? Just a tiny spark of how much I love you.
-    </p>
-    <p class="signature">Forever yours,<br>Mr.HEIN MIN THU</p>
-    <div class="hearts">♥ ♥ ♥</div>
+    <h1> (My_Heart.Hurts) </h1>
+    <div class="message">
+      I'm truly sorry for hurting you.<br>
+    You mean the world to me, and I hate that I made you feel otherwise.<br>
+    Every moment without your smile feels like a bug I can't fix.<br>
+    Please forgive me... let's rewrite our story with more love. 💖
+    Down here our memories.
+    </div>
+    <h1></h1>
   </div>
+
+  <!-- Replace these with your actual photo filenames -->
+  <img src="photo1.jpg" alt="Cute Memory 1">
+  <img src="photo2.jpg" alt="Cute Memory 2">
+  <img src="photo3.jpg" alt="Cute Memory 3">
+
+  <footer>
+    Made with love & regret 💌
+  </footer>
+
 </body>
 </html>
